Recepie page update
User-friendly design.

--- a/MockupUpgrade/MockupUpgrade/index.html
+++ b/MockupUpgrade/MockupUpgrade/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Food Code Proudly Presents By Themexpert</title>
+	<title>Main Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- Fonts -->
@@ -87,11 +87,11 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
 		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="products.html">SALADS</a></li>
-					<li><a href="blog.html">MEAT</a></li>
-					<li><a href="blog-single.html">FISH</a></li>
-					<li><a href="blog-single.html">PIZZA</a></li>
-					<li><a href="blog-single.html">DESSERTS</a></li>
+					<li><a href="#.html">SALADS</a></li>
+					<li><a href="#">MEAT</a></li>
+					<li><a href="#">FISH</a></li>
+					<li><a href="#">PIZZA</a></li>
+					<li><a href="#">DESSERTS</a></li>
 					
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
