--- a/MockupUpgrade/MockupUpgrade/single-product.html
+++ b/MockupUpgrade/MockupUpgrade/single-product.html
@@ -95,55 +95,27 @@
 
 
 
-	<section id="single-product">
+	<section id="product">
 		<div class="container">
 					<div class="product">
 						<img src="images/pancakes.jpg" alt="">
-					</div> <!-- End of /.col-md-5 -->
-		</div>	<!-- End of /.Container -->
+					</div>
+		</div>
 		<div class="container">
-				<div class="product-des .view-link">
+			<div class="row">
+				<div class="col-md-12">
 					<div class="product-des">
-						<h4>Claritas est etiam</h4>
-						<p class="price">$380</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, culpa, esse, magni omnis blanditiis unde vitae in nobis fuga optio numquam at ipsum impedit perspiciatis quia rem consequatur recusandae repudiandae provident nemo voluptatibus corporis ab id iste pariatur ipsam vero porro eos eaque rerum nam dolorum mollitia adipisci. Quaerat, ullam!</p>
-						<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
+						<div class="product">
+							<h4>Claritas est etiam</h4>
+							<p class="price">$380</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, culpa, esse, magni omnis blanditiis unde vitae in nobis fuga optio numquam at ipsum impedit perspiciatis quia rem consequatur recusandae repudiandae provident nemo voluptatibus corporis ab id iste pariatur ipsam vero porro eos eaque rerum nam dolorum mollitia adipisci. Quaerat, ullam!</p>
+							<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
+						</div>
 					</div>	<!-- End of /.product-des -->
 				</div> <!-- End of /.block -->
+			</div>
 		</div>	<!-- End of /.col-md-4 -->
-
 	</section> <!-- End of /.Single-product -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 	<!-- FOOTER Start
