Pages redesign and functional improvement
1) single-product page: were added fields for ingredients and recepie,
plus redesign
2) order page: Amount input was added, links were fixed, plus redesign
3) thanks page: Return to main page button was added, plus redesign

--- a/MockupUpgrade/MockupUpgrade/thanks.html
+++ b/MockupUpgrade/MockupUpgrade/thanks.html
@@ -103,6 +103,9 @@
 				<div class="breadcrumb">
 					<h1>Thanks for your order!</h1>
 				</div>
+				<div class="product-des">
+					<a class="view-link" href="index.html"><i class="fa fa-plus-circle"></i>Return back</a>
+				</div>
 			</div>
 		</div>
 	</section>
