--- a/MockupUpgrade/MockupUpgrade/order.html
+++ b/MockupUpgrade/MockupUpgrade/order.html
@@ -38,13 +38,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"></p>
+					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+(372) 84 302 194</strong></p>
 				</div>
-				<div class="col-md-2">
-				</div>
-			</div> 
+			</div>
 		</div>
-    </section>
+	</section>
 	
 
 
@@ -82,12 +80,12 @@
 
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
-		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#.html">SALADS</a></li>
-					<li><a href="#">MEAT</a></li>
-					<li><a href="#">FISH</a></li>
-					<li><a href="#">PIZZA</a></li>
-					<li><a href="#">DESSERTS</a></li>
+		        	<li class="active"><a href="index.html">HOME</a></li>
+					<li><a href="index.html">SALADS</a></li>
+					<li><a href="index.html">MEAT</a></li>
+					<li><a href="index.html">FISH</a></li>
+					<li><a href="index.html">PIZZA</a></li>
+					<li><a href="index.html">DESSERTS</a></li>
 					
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
@@ -99,21 +97,11 @@
 <!-- Breadcrumbs Start
     ================================================== -->
 
-	<section id="topic-header">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<h1>Order</h1>
-				</div>	<!-- End of /.col-md-4 -->
-			</div>	<!-- End of /.row -->
-		</div>	<!-- End of /.container -->
-	</section>	<!-- End of /#Topic-header -->
-
 
 	<section id="blog">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-9 clearfix">
+				<div class="col-md-12">
 					<div class="leave-comment">
 						<h5>Shipping Address</h5>
 						<form class="form-horizontal" role="form">
@@ -147,8 +135,13 @@
 							      	<input type="text" class="form-control" id="inputMobile" placeholder="Mobile">
 							    </div>
 						  	</div>	<!-- End of /.form-group -->
-						  		
-				            <div >
+						  	<div class="form-group">
+						    	<label for="inputAddress" class="col-sm-2 control-label">Amount</label>
+							    <div class="col-sm-10">
+							      	<input type="text" class="form-control" id="inputAddress" placeholder="Street Address">
+							    </div>
+						  	</div>	<!-- End of /.form-group -->
+				            <div class="product-des">
                                 <a class="view-link" href="thanks.html"><i class="fa fa-plus-circle"></i>Order</a>
 						    </div>
 						</form>	<!-- End of /.form-horizontal -->
