--- a/MockupUpgrade/MockupUpgrade/single-product.html
+++ b/MockupUpgrade/MockupUpgrade/single-product.html
@@ -93,28 +93,46 @@
 
 
 
-
-
 	<section id="product">
 		<div class="container">
-					<div class="product">
-						<img src="images/pancakes.jpg" alt="">
-					</div>
-		</div>
-		<div class="container">
 			<div class="row">
+				<div class="product">
+				<img src="images/cheesecake.jpg">
+				</div>
 				<div class="col-md-12">
 					<div class="product-des">
 						<div class="product">
-							<h4>Claritas est etiam</h4>
-							<p class="price">$380</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, culpa, esse, magni omnis blanditiis unde vitae in nobis fuga optio numquam at ipsum impedit perspiciatis quia rem consequatur recusandae repudiandae provident nemo voluptatibus corporis ab id iste pariatur ipsam vero porro eos eaque rerum nam dolorum mollitia adipisci. Quaerat, ullam!</p>
-							<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Proceed to checkout</a>
+							<h3>Cheesecake</h3>
+							<p class="price">€4.20</p>
+							<div class="product-heading">
+								<h3>INGREDIENTS</h3>
+							</div>
+							<h5 class="price">graham cracker crumbs, confectioners' sugar, butter, salt, cream cheese, eggs, raspberries, ground cinnamon</h5>
 						</div>
 					</div>	<!-- End of /.product-des -->
-				</div> <!-- End of /.block -->
+				</div>
+				<div class="product-heading">
+					<h3>RECIPE</h3>
+				</div>
+				<div class="product-dest" >
+					<h6>1.Select a pie pan whose inside top dimension is at least 9", and whose height is at least 1 1/4". Preheat the oven to 350°F.</h6>
+					<h6>2.Make the crust by stirring together all of the crust ingredients, mixing until thoroughly combined.</h6>
+					<h6>3.Press the crumbs into the bottom and up the sides of the pie pan, making a thicker layer on the bottom than on the sides.</h6>
+					<h6>4.Make the filling by mixing together the room-temperature cream cheese and sugar until smooth. Mix in the eggs and vanilla, again mixing until smooth. To avoid beating too much air into the batter, use a mixer set at low-medium speed. To avoid lumps, make sure the cream cheese is softened, and/or at room temperature.</h6>
+					<h6>5.Set the pie pan onto a baking sheet, if desired; this makes it easier to transport in and out of the oven, and also protects the bottom of the crust from any potential scorching. Pour the filling into the crust.</h6>
+					<h6>6.Place the cheesecake in the oven. Bake it for 20 minutes, then add a crust shield; or shield the crust with strips of aluminum foil. Bake for an additional 10 minutes (for a total of about 30 minutes). An instant-read thermometer inserted into the crust 1" from the edge should read between 165°F and 170°F; the filling won't look entirely set in the center.</h6>
+					<h6>7.Remove the cheesecake from the oven, and set it on a rack to cool while you make the topping. Once the cake is cool, refrigerate it, covered, until you're ready to serve it.</h6>
+					<h6>8.To make the topping, place the frozen raspberries in a bowl to thaw. You can hasten the process with a quick trip through the microwave, but don't let the berries cook.</h6>
+					<h6>9.Add 1 tablespoon Pie Filling Enhancer, and stir until well combined. Is the topping as thick as you like? If not, stir in another tablespoon Pie Filling Enhancer.</h6>
+					<h6>10.Add 1 to 2 tablespoons granulated sugar, to taste. Stir in a pinch of ground cinnamon, if desired.</h6>
+					<h6>11.Spoon the topping over the cheesecake, and cut slices to serve. Alternatively, cut slices, and top each with a dollop of topping.</h6>
+				</div>
+				<div class="product-des">
+					<a class="view-link" href="order.html"><i class="fa fa-plus-circle"></i>Order</a>
+				</div>
+				<!-- End of /.block -->
 			</div>
-		</div>	<!-- End of /.col-md-4 -->
+		</div>
 	</section> <!-- End of /.Single-product -->
 
 
