--- a/MockupUpgrade/MockupUpgrade/index.html
+++ b/MockupUpgrade/MockupUpgrade/index.html
@@ -147,6 +147,19 @@
 										<i class="fa fa-plus-circle"></i>Check Items</a>
 								</div>
 							</div>
+							
+							<div class="col-md-3">
+								<div class="products">
+									<a href="pancakes.html">
+										<img src="images/pancakes.jpg">
+										<h3>Pancakes</h3>
+									</a>
+									<p class="price">From: €3.50</p>
+									<a class="view-link shutter" href="pancakes.html">
+										<i class="fa fa-plus-circle"></i>Check Items</a>
+								</div>
+							</div>
+							
 						</div>
 					</div>
 				</div>
