--- a/MockupUpgrade/MockupUpgrade/order.html
+++ b/MockupUpgrade/MockupUpgrade/order.html
@@ -138,7 +138,7 @@
 						  	<div class="form-group">
 						    	<label for="inputAddress" class="col-sm-2 control-label">Amount</label>
 							    <div class="col-sm-10">
-							      	<input type="text" class="form-control" id="inputAddress" placeholder="Street Address">
+							      	<input type="text" class="form-control" id="inputAddress" placeholder="Number of servings">
 							    </div>
 						  	</div>	<!-- End of /.form-group -->
 				            <div class="product-des">
