--- a/MockupUpgrade/MockupUpgrade/order.html
+++ b/MockupUpgrade/MockupUpgrade/order.html
@@ -103,12 +103,31 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="leave-comment">
-						<h5>Shipping Address</h5>
+						<h5>Shipping Information</h5>
 						<form class="form-horizontal" role="form">
+							
+							<div class="form-group">
+						    	<label for="inputAddress" class="col-sm-2 control-label">Dish</label>
+							    <div class="col-sm-10">
+							      	<input type="text" class="form-control" id="inputAddress" placeholder="Chosen dish">
+							    </div>
+						  	</div>	<!-- End of /.form-group -->
+							<div class="form-group">
+						    	<label for="inputAddress" class="col-sm-2 control-label">Number of servings</label>
+							    <div class="col-sm-10">
+							      	<input type="text" class="form-control" id="inputAddress" placeholder="Number of servings">
+							    </div>
+						  	</div>	<!-- End of /.form-group -->
 							<div class="form-group">
 						    	<label for="inputname" class="col-sm-2 control-label">Contact Name</label>
 							    <div class="col-sm-10">
-							      	<input type="text" class="form-control" id="inputname" placeholder="Contact Name">
+							      	<input type="text" class="form-control" id="inputname" placeholder="Name">
+							    </div>
+						  	</div>	<!-- End of /.form-group -->
+							<div class="form-group">
+						    	<label for="inputCity" class="col-sm-2 control-label">City</label>
+							    <div class="col-sm-10">
+							      	<input type="text" class="form-control" id="inputCity" placeholder="City">
 							    </div>
 						  	</div>	<!-- End of /.form-group -->
 						  	<div class="form-group">
@@ -116,31 +135,26 @@
 							    <div class="col-sm-10">
 							      	<input type="region" class="form-control" id="inputRegion" placeholder="State/Province/Region">
 							    </div>
-						  	</div>	<!-- End of /.form-group -->
+						  	</div>	<!-- End of /.form-group --> 	
 						  	<div class="form-group">
-						    	<label for="inputCity" class="col-sm-2 control-label">City</label>
-							    <div class="col-sm-10">
-							      	<input type="text" class="form-control" id="inputCity" placeholder="City">
-							    </div>
-						  	</div>	<!-- End of /.form-group -->
-						  	<div class="form-group">
-						    	<label for="inputAddress" class="col-sm-2 control-label">Street Address</label>
+						    	<label for="inputAddress" class="col-sm-2 control-label">Street and home/flat number</label>
 							    <div class="col-sm-10">
 							      	<input type="text" class="form-control" id="inputAddress" placeholder="Street Address">
 							    </div>
 						  	</div>	<!-- End of /.form-group -->
+							<div class="form-group">
+						    	<label for="inputname" class="col-sm-2 control-label">Comments</label>
+							    <div class="col-sm-10">
+							      	<input type="text" class="form-control" id="inputname" placeholder="Leave your comments or wishes">
+							    </div>
+						  	</div>	<!-- End of /.form-group -->
                             <div class="form-group">
-						    	<label for="inputMobile" class="col-sm-2 control-label">Mobile</label>
+						    	<label for="inputMobile" class="col-sm-2 control-label">Contact number</label>
 							    <div class="col-sm-10">
-							      	<input type="text" class="form-control" id="inputMobile" placeholder="Mobile">
+							      	<input type="text" class="form-control" id="inputMobile" placeholder="Phone number">
 							    </div>
 						  	</div>	<!-- End of /.form-group -->
-						  	<div class="form-group">
-						    	<label for="inputAddress" class="col-sm-2 control-label">Amount</label>
-							    <div class="col-sm-10">
-							      	<input type="text" class="form-control" id="inputAddress" placeholder="Number of servings">
-							    </div>
-						  	</div>	<!-- End of /.form-group -->
+						  	
 				            <div class="product-des">
                                 <a class="view-link" href="thanks.html"><i class="fa fa-plus-circle"></i>Order</a>
 						    </div>
